[gd_scene load_steps=47 format=3 uid="uid://bh4q5ht3mex2f"]

[ext_resource type="Script" uid="uid://dlkpl4dydjlr1" path="res://Scripts/cam_ani.gd" id="2_ffxw4"]
[ext_resource type="Texture2D" uid="uid://ykwonp753y3t" path="res://Art/Player/idle.png" id="3_6cmtb"]
[ext_resource type="Texture2D" uid="uid://ddc5av83rpsie" path="res://Art/Ruins-Tilesheet-Omniclause(outlines).png" id="3_8iq3p"]
[ext_resource type="Texture2D" uid="uid://bsrs8wiuoyv45" path="res://Art/Old/Dungeon Tile Set.png" id="3_d6qps"]
[ext_resource type="Script" uid="uid://cqex7oetd6l57" path="res://Scripts/cut_scene_ani_player.gd" id="5_ffxw4"]
[ext_resource type="Texture2D" uid="uid://d5yfj78gfr5r" path="res://Art/DialogueBox.png" id="6_d6qps"]
[ext_resource type="Texture2D" uid="uid://dhv1auxhhenjt" path="res://Art/Player/run.png" id="6_ffxw4"]
[ext_resource type="FontFile" uid="uid://1tietc8monub" path="res://joystix monospace.otf" id="7_d6qps"]
[ext_resource type="Texture2D" uid="uid://csxqnasx3ythi" path="res://1.png" id="9_g1cvq"]
[ext_resource type="Texture2D" uid="uid://c42ud84gpnroi" path="res://Art/portal/2.png" id="10_xwqrs"]
[ext_resource type="Texture2D" uid="uid://cgkgpia1ftwyf" path="res://Art/portal/3.png" id="11_iffgr"]

[sub_resource type="Animation" id="Animation_olvls"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_md3j3"]
resource_name = "idle"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_rf4qq"]
resource_name = "shake"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2(0, 0), Vector2(5, 0), Vector2(0, 0), Vector2(-5, 0), Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_md3j3"]
_data = {
&"RESET": SubResource("Animation_olvls"),
&"idle": SubResource("Animation_md3j3"),
&"shake": SubResource("Animation_rf4qq")
}

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_671ag"]
texture = ExtResource("3_d6qps")
1:1/0 = 0
1:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:1/0 = 0
2:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:1/0 = 0
3:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:1/0 = 0
5:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-0.247305, -1.18707, 8, -8, 8, 8, -8, 8)
6:1/0 = 0
6:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, -0.741917, -1.48384, 8, 8, -8, 8)
8:1/0 = 0
8:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
9:1/0 = 0
9:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
10:1/0 = 0
10:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
11:1/0 = 0
11:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
12:1/0 = 0
12:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
13:1/0 = 0
13:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:2/0 = 0
1:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:2/0 = 0
2:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:2/0 = 0
3:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:2/0 = 0
5:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:2/0 = 0
6:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
8:2/0 = 0
8:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
9:2/0 = 0
9:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
10:2/0 = 0
10:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
11:2/0 = 0
11:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
12:2/0 = 0
12:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
13:2/0 = 0
13:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:3/0 = 0
1:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:3/0 = 0
2:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:3/0 = 0
3:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:3/0 = 0
5:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:3/0 = 0
6:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
8:3/0 = 0
8:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
9:3/0 = 0
9:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
10:3/0 = 0
10:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
11:3/0 = 0
11:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
12:3/0 = 0
12:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
13:3/0 = 0
13:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
8:4/0 = 0
8:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
9:4/0 = 0
9:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
10:4/0 = 0
10:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
11:4/0 = 0
11:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
12:4/0 = 0
12:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:5/0 = 0
1:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:5/0 = 0
2:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:5/0 = 0
3:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:5/0 = 0
5:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, 0.44515, 0.593533)
6:5/0 = 0
6:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, -0.642994, 0.197844, -8, 8)
8:5/0 = 0
8:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
9:5/0 = 0
9:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
10:5/0 = 0
10:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
11:5/0 = 0
11:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
12:5/0 = 0
12:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:6/0 = 0
1:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:6/0 = 0
2:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:6/0 = 0
3:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:6/0 = 0
6:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:6/0 = 0
7:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
8:6/0 = 0
8:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
9:6/0 = 0
9:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
10:6/0 = 0
10:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
11:6/0 = 0
11:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
12:6/0 = 0
12:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:7/0 = 0
1:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:7/0 = 0
2:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:7/0 = 0
3:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:7/0 = 0
6:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:7/0 = 0
7:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
8:7/0 = 0
8:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
9:7/0 = 0
9:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
10:7/0 = 0
10:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
11:7/0 = 0
11:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
12:7/0 = 0
12:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:8/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
5:9/0 = 0
7:9/0 = 0
8:9/0 = 0
9:9/0 = 0
10:9/0 = 0
11:9/0 = 0
12:9/0 = 0
13:9/0 = 0
1:10/0 = 0
2:10/0 = 0
3:10/0 = 0
5:10/0 = 0
7:10/0 = 0
8:10/0 = 0
10:10/0 = 0
12:10/0 = 0
13:10/0 = 0
1:11/0 = 0
2:11/0 = 0
5:11/0 = 0
7:11/0 = 0
8:11/0 = 0
9:11/0 = 0
10:11/0 = 0
12:11/0 = 0
13:11/0 = 0
1:12/0 = 0
2:12/0 = 0
3:12/0 = 0
4:12/0 = 0
5:12/0 = 0
6:12/0 = 0
7:12/0 = 0
8:12/0 = 0
9:12/0 = 0
10:12/0 = 0
11:12/0 = 0
12:12/0 = 0
2:13/0 = 0
4:13/0 = 0
5:13/0 = 0
6:13/0 = 0
7:13/0 = 0
8:13/0 = 0
9:13/0 = 0
1:14/0 = 0
2:14/0 = 0
3:14/0 = 0
4:14/0 = 0
5:14/0 = 0
6:14/0 = 0
10:14/0 = 0
11:14/0 = 0
12:14/0 = 0
13:14/0 = 0
7:15/0 = 0
8:15/0 = 0
9:15/0 = 0
10:15/0 = 0
11:15/0 = 0
12:15/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_c78ea"]
texture = ExtResource("3_8iq3p")
15:1/0 = 0
16:1/0 = 0
18:1/0 = 0
19:1/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
9:3/0 = 0
11:3/0 = 0
12:3/0 = 0
13:3/0 = 0
15:3/0 = 0
16:3/0 = 0
17:3/0 = 0
18:3/0 = 0
19:3/0 = 0
20:3/0 = 0
21:3/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
9:4/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
9:5/0 = 0
11:5/0 = 0
12:5/0 = 0
13:5/0 = 0
15:5/0 = 0
16:5/0 = 0
18:5/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0

[sub_resource type="TileSet" id="TileSet_rf4qq"]
physics_layer_0/collision_layer = 3
physics_layer_0/collision_mask = 3
sources/0 = SubResource("TileSetAtlasSource_671ag")
sources/1 = SubResource("TileSetAtlasSource_c78ea")

[sub_resource type="AtlasTexture" id="AtlasTexture_5htar"]
atlas = ExtResource("3_6cmtb")
region = Rect2(32, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_h3veh"]
atlas = ExtResource("3_6cmtb")
region = Rect2(112, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_4sjjm"]
atlas = ExtResource("3_6cmtb")
region = Rect2(192, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ryam3"]
atlas = ExtResource("3_6cmtb")
region = Rect2(272, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ffxw4"]
atlas = ExtResource("3_6cmtb")
region = Rect2(32, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_08qa8"]
atlas = ExtResource("3_6cmtb")
region = Rect2(112, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_0hinf"]
atlas = ExtResource("3_6cmtb")
region = Rect2(192, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_i0v18"]
atlas = ExtResource("3_6cmtb")
region = Rect2(272, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_d6qps"]
atlas = ExtResource("6_ffxw4")
region = Rect2(32, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_8iq3p"]
atlas = ExtResource("6_ffxw4")
region = Rect2(112, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_c78ea"]
atlas = ExtResource("6_ffxw4")
region = Rect2(192, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_1u1ao"]
atlas = ExtResource("6_ffxw4")
region = Rect2(272, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_g1cvq"]
atlas = ExtResource("6_ffxw4")
region = Rect2(352, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_xwqrs"]
atlas = ExtResource("6_ffxw4")
region = Rect2(432, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_iffgr"]
atlas = ExtResource("6_ffxw4")
region = Rect2(512, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_w76kr"]
atlas = ExtResource("6_ffxw4")
region = Rect2(592, 32, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_5htar"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5htar")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h3veh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4sjjm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ryam3")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ffxw4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_08qa8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0hinf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i0v18")
}],
"loop": true,
"name": &"idle_left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_d6qps")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8iq3p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c78ea")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1u1ao")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g1cvq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xwqrs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iffgr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w76kr")
}],
"loop": true,
"name": &"run",
"speed": 10.0
}]

[sub_resource type="Animation" id="Animation_ffxw4"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Camera2D:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Player_Null:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("exit_block_node:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 200)]
}

[sub_resource type="Animation" id="Animation_d6qps"]
resource_name = "close_exit"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("exit_block_node:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 200), Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_8iq3p"]
resource_name = "ending_cutscene"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Camera2D:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(300, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Player_Null:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(40, 0)]
}

[sub_resource type="Animation" id="Animation_6cmtb"]
resource_name = "start_of_cutscene"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Camera2D:offset")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-300, 0), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Player_Null:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-80, 0), Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_d6qps"]
_data = {
&"RESET": SubResource("Animation_ffxw4"),
&"close_exit": SubResource("Animation_d6qps"),
&"ending_cutscene": SubResource("Animation_8iq3p"),
&"start_of_cutscene": SubResource("Animation_6cmtb")
}

[sub_resource type="LabelSettings" id="LabelSettings_8iq3p"]
font = ExtResource("7_d6qps")
font_size = 10

[sub_resource type="LabelSettings" id="LabelSettings_g1cvq"]
font = ExtResource("7_d6qps")
font_size = 8

[sub_resource type="Animation" id="Animation_xwqrs"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_g1cvq"]
resource_name = "idle"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_iffgr"]
_data = {
&"RESET": SubResource("Animation_xwqrs"),
&"idle": SubResource("Animation_g1cvq")
}

[sub_resource type="SpriteFrames" id="SpriteFrames_w76kr"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("9_g1cvq")
}, {
"duration": 1.0,
"texture": ExtResource("10_xwqrs")
}, {
"duration": 1.0,
"texture": ExtResource("11_iffgr")
}],
"loop": true,
"name": &"default",
"speed": 4.0
}]

[node name="Cut_Scene" type="Node2D"]
process_mode = 3

[node name="Camera2D" type="Camera2D" parent="."]

[node name="cam_ani" type="AnimationPlayer" parent="Camera2D"]
libraries = {
&"": SubResource("AnimationLibrary_md3j3")
}
autoplay = "idle"
script = ExtResource("2_ffxw4")

[node name="ColorRect" type="ColorRect" parent="Camera2D"]
z_index = -1
offset_left = -616.0
offset_top = -363.0
offset_right = 628.0
offset_bottom = 409.0
color = Color(0, 0, 0, 1)

[node name="AudioListener2D" type="AudioListener2D" parent="Camera2D"]

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource("TileSet_rf4qq")
format = 2
layer_0/tile_data = PackedInt32Array(-65538, 262145, 6, -65537, 262145, 6, -131072, 262145, 6, 131070, 262145, 6, 131071, 262145, 6, 65536, 262145, 6, 65537, 262145, 6, 65538, 262145, 6, -131071, 262145, 6, -131070, 262145, 6, -65539, 262145, 6, 131069, 262145, 6, 131066, 262145, 6, 131067, 262145, 6, 131068, 262145, 6, -65542, 262145, 6, -65541, 262145, 6, -65540, 262145, 6, -65530, 458753, 4, 6, 458753, 4, 65542, 327681, 6, 65539, 262145, 6, 65540, 262145, 6, 65541, 262145, 6, -131069, 262145, 6, -131068, 262145, 6, -131067, 262145, 6, -131066, 327681, 2)

[node name="exit_block_node" type="Node2D" parent="."]
position = Vector2(0, 200)

[node name="exit_block" type="TileMap" parent="exit_block_node"]
tile_set = SubResource("TileSet_rf4qq")
format = 2
layer_0/tile_data = PackedInt32Array(-65543, 65537, 3, -7, 65537, 4, 65529, 65537, 4, 131065, 65537, 5)

[node name="Player_Null" type="Node2D" parent="."]

[node name="player_null_ani" type="AnimatedSprite2D" parent="Player_Null"]
position = Vector2(0, 9)
sprite_frames = SubResource("SpriteFrames_5htar")
animation = &"idle_left"
autoplay = "run"

[node name="CutScene" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_d6qps")
}
autoplay = "start_of_cutscene"
script = ExtResource("5_ffxw4")

[node name="DialogueBox" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0
offset_top = -21.0
offset_right = 40.0
offset_bottom = 19.0

[node name="Sprite2D" type="Sprite2D" parent="DialogueBox"]
position = Vector2(0, 103)
scale = Vector2(1.5, 1.5)
texture = ExtResource("6_d6qps")

[node name="Label" type="Label" parent="DialogueBox"]
layout_mode = 0
offset_left = -89.0
offset_top = 62.0
offset_right = 88.0
offset_bottom = 145.0
label_settings = SubResource("LabelSettings_8iq3p")
autowrap_mode = 2

[node name="dialoguetimer" type="Timer" parent="DialogueBox"]
wait_time = 0.01
one_shot = true
ignore_time_scale = true

[node name="enter" type="Label" parent="DialogueBox"]
visible = false
self_modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = 26.0
offset_top = 134.0
offset_right = 89.0
offset_bottom = 145.0
text = "Enter -->"
label_settings = SubResource("LabelSettings_g1cvq")

[node name="AnimationPlayer" type="AnimationPlayer" parent="DialogueBox/enter"]
libraries = {
&"": SubResource("AnimationLibrary_iffgr")
}
autoplay = "idle"

[node name="portal" type="AnimatedSprite2D" parent="."]
position = Vector2(87, 0)
sprite_frames = SubResource("SpriteFrames_w76kr")
autoplay = "default"
frame_progress = 0.73272

[connection signal="animation_finished" from="Camera2D/cam_ani" to="Camera2D/cam_ani" method="_on_animation_finished"]
[connection signal="animation_finished" from="CutScene" to="CutScene" method="_on_animation_finished"]
